--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
-    <div id='header'>
+    <div id='header' class='ui-widget-header ui-corner-all'>
       <h1>S&aacute;dhana</h1>
 
       <div id='menu'>
