--- a/public/stylesheets/awesome.css
+++ b/public/stylesheets/awesome.css
@@ -53,7 +53,7 @@
 }
 
 .blue.awesome:hover {
-  background-color: #007d9a;
+  background-color: #1C94C4;
 }
 
 .red.awesome, .red.awesome:visited {
@@ -73,11 +73,11 @@
 }
 
 .orange.awesome, .orange.awesome:visited {
-  background-color: #ff5c00;
+  background-color: #F6A828;
 }
 
 .orange.awesome:hover {
-  background-color: #d45500;
+  background-color: #E78F08;
 }
 
 .yellow.awesome, .yellow.awesome:visited {
