fix bug on description

--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -9,7 +9,7 @@
 
 <p>
   <b>Description:</b>
-  <%= jeditable_field(:practice, :description, {:type => 'textarea'}) %>
+  <%= jeditable_field(:practice, :description) %>
 </p>
 
 <p>
