--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -134,6 +134,10 @@ span#jeditable_delay input {
   width: 20px;
 }
 
+span#jeditable_description input {
+  width: 92%;
+}
+
 .multiple.field {
   margin: 0;
 }
