title on dialogs

--- a/app/views/practice_events/index.html.erb
+++ b/app/views/practice_events/index.html.erb
@@ -31,4 +31,6 @@ $('#calendar').fullCalendar({
   }
 });
 <% end %>
-<div id='edit_dialog' style='display:none'></div>
+<div id='confirm_dialog' style='display:none' title='Confirm delete'><p>Are you sure?</p></div>
+<div id='new_event_dialog' style='display:none' title='New event'></div>
+<div id='edit_event_dialog' style='display:none' title='Edit event'></div>
