--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -15,8 +15,6 @@
 <h2>Shared Practices</h2>
 <h3>Soon!</h3>
 
-<div id='confirm_dialog'></div>
-<div id='edit_dialog' style='display:none'></div>
-<br />
-
-
+<div id='confirm_dialog' style='display:none' title='Confirm delete'><p>Are you sure?</p></div>
+<div id='practice_dialog' style='display:none'></div>
+<div id='new_event_dialog' style='display:none'></div>
