--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -185,5 +185,5 @@
   });
 <% end %>
 
-<div id='edit_dialog' style='display:none'></div>
-<div id='confirm_dialog'></div>
+<div id='practice_dialog' style='display:none' title='Edit practice technique'></div>
+<div id='confirm_dialog' style='display:none' title='Confirm delete'><p>Are you sure?</p></div>
