--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -43,13 +43,13 @@
 </div>
 
 <%= javascript_tag do %>
-  $('#techniques_accordion').height($(window).height() - 300);
-  $('#practice_techniques').height($(window).height() - 200);
-  $(window).resize(function() {
-    $('#techniques_accordion .techniques-viewport').height($(window).height() - 310);
-    $('#practice_techniques').height($(window).height() - 200);
-  });
   $(document).ready(function(){
+    $('#techniques_accordion').height($(window).height() - 300);
+    $('#practice_techniques').height($(window).height() - 200);
+    $(window).resize(function() {
+      $('#techniques_accordion .techniques-viewport').height($(window).height() - 310);
+      $('#practice_techniques').height($(window).height() - 200);
+    });
     var qs = $('#q').quicksearch('.ui-accordion-content-active .techniques-list .technique', {selector: 'h3'});
     $.ajax({
       type:'get',
@@ -57,6 +57,7 @@
       dataType: 'script',
       url: '/techniques',
       complete: function(){
+        Practices.accordion_draggable();
         qs.cache();
       }
     });
@@ -73,26 +74,6 @@
         }
       }
     );
-    $('#techniques_accordion .asana').draggable({
-      scroll: false,
-      connectToSortable: '#practice_techniques',
-      helper: 'clone',
-      appendTo : 'body',
-      revert: 'invalid',
-      drag: function(event, ui) {
-        ui.helper.css({width: '150px', height: '150px'});
-      }
-    });
-
-    $('#techniques_accordion .mudra').draggable({
-      scroll: false,
-      helper: 'clone',
-      appendTo : 'body',
-      revert: 'invalid',
-      drag: function(event, ui) {
-        ui.helper.css({border:'1px solid black'});
-      }
-    });
 
     $("#practice_techniques").droppable({
       accept: '.asana',
@@ -141,6 +122,7 @@
           dataType: 'script',
           url: '/techniques',
           complete: function() {
+            Practices.accordion_draggable();
             qs.cache();
           }
         });
