--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -167,5 +167,5 @@
   });
 <% end %>
 
-<div id='practice_dialog' style='display:none' title='Edit practice technique'></div>
+<div id='practice_technique_dialog' style='display:none' title='Edit practice technique'></div>
 <div id='confirm_dialog' style='display:none' title='Confirm delete'><p>Are you sure?</p></div>
