--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -3,17 +3,17 @@
 </noscript>
 
 <p>
-  <b>Name:</b>
+  <b>Name:</b><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='The name you want for your practice.'>(?)</span></span>
   <%= jeditable_field(:practice, :name) %>
 </p>
 
 <p>
-  <b>Description:</b>
+  <b>Description:</b><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='A nice description of your practice'>(?)</span></span>
   <%= jeditable_field(:practice, :description) %>
 </p>
 
 <p>
-  <b>Delay:</b>
+  <b>Delay:</b><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='Seconds to wait between each practice technique.'>(?)</span></span>
   <%= jeditable_field(:practice, :delay) %>
 </p>
 <div id='practice_editor'>
