--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -28,3 +28,9 @@ ul.actions li{
 #confirm_dialog p {
   margin: 12px 0 0 0;
 }
+
+.help {
+  display: inline-block;
+  margin-left: 4px;
+  vertical-align: top;
+}
