--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= javascript_include_tag 'jquery-1.4.2.min' %>
     <%= javascript_include_tag 'jquery.rails' %>
     <%= javascript_include_tag 'jquery-ui-1.8rc3.custom.min' %>
+    <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'jquery.jeditable' %>
     <%= javascript_include_tag 'jquery.cycle' %>
     <%= javascript_include_tag 'jcountr' %>
