--- a/app/views/practices/_fields.html.erb
+++ b/app/views/practices/_fields.html.erb
@@ -1,12 +1,15 @@
 <div class="field">
-  <%= f.label :name %><br />
+  <%= f.label :name %><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='The name you want for your practice.'>(?)</span></span>
+  <br />
   <%= f.text_field :name %>
 </div>
 <div class="field">
-  <%= f.label :description %><br />
+  <%= f.label :description %><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='A nice description of your practice'>(?)</span></span>
+  <br />
   <%= f.text_area :description, :rows => 10 %>
 </div>
 <div class="field">
-  <%= f.label :delay %><br />
+  <%= f.label :delay %><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='Seconds to wait between each practice technique.'>(?)</span></span>
+  <br />
   <%= f.text_field :delay %>
 </div>
