--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,10 +1,11 @@
 #header {
-  overflow: auto;
+  overflow: hidden;
 }
 
 #header h1 {
   float: left;
   margin-left: 10px;
+  font-weight: bold;
 }
 
 #header #menu {
