--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -166,3 +166,32 @@ span#jeditable_description input {
   width: 99%;
   height: 100px;
 }
+
+#countdown {
+  width: 100%;
+  text-align: center;
+}
+
+#slideshow_practice_techniques {
+  width: 100%;
+  display: block;
+}
+
+.slideshow_practice_technique {
+  display: block;
+  height: 460px;
+}
+
+#main_panel {
+  display: inline-block;
+  float: left;
+  width: 30%;
+  text-align: center;
+}
+
+#info_panel {
+  display: inline-block;
+  float: left;
+  width: 70%;
+
+}
