jquery-ui theme on calendar

--- a/app/views/practice_events/index.html.erb
+++ b/app/views/practice_events/index.html.erb
@@ -6,6 +6,7 @@ $('#calendar').fullCalendar({
     center: 'title',
     right: 'next'
   },
+  theme: 'ui-lightning',
   editable: false,
   events: [
     <% events_array = [] %>
