even more translations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
     <%= javascript_include_tag 'jquery-1.4.2.min' %>
     <%= javascript_include_tag 'jquery.rails' %>
     <%= javascript_include_tag 'jquery-ui-1.8rc3.custom.min' %>
+    <% if false %>
+      <%= javascript_include_tag 'jquery.ui.datepicker-es' %>
+      <%= javascript_tag do %>
+        $.datepicker.regional['es']
+      <% end %>
+    <% end %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'jquery.jeditable' %>
     <%= javascript_include_tag 'jquery.cycle' %>
