--- a/app/views/practice_events/_fields.html.erb
+++ b/app/views/practice_events/_fields.html.erb
@@ -1,11 +1,11 @@
 <div class="field">
-  <%= f.label :practice_id %><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='Choose the practice.'>(?)</span></span>
+  <%= f.label :practice_id %><% field_help t('practice_event.help.practice') %>
   <br />
   <%= f.collection_select :practice_id, current_user.practices, :id, :name %>
 </div>
 
 <div class="field">
-  <%= f.label :start_string %><span class='ui-state-default ui-corner-all help'><span class='ui-icon ui-icon-help' title='Date and time for the event.'>(?)</span></span>
+  <%= f.label :start_string %><% field_help t('practice_event.help.start') %>
   <br />
   <%= f.text_field :start_string %>
 </div>
