--- a/app/views/practices/_practice.html.erb
+++ b/app/views/practices/_practice.html.erb
@@ -16,7 +16,7 @@
             height:140,
             modal: true,
             buttons: {
-              #{t('actions.delete')}: function() {
+              '#{t('actions.delete')}': function() {
                 $.ajax({
                     type:'post',
                     data: { '_method': 'delete' },
@@ -30,7 +30,7 @@
                 });
                 $(this).dialog('close');
               },
-              #{t('actions.cancel')}: function() {
+              '#{t('actions.cancel')}': function() {
                 $(this).dialog('close');
               }
             }
