--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -33,18 +33,25 @@ div.field, div.actions {
 }
 
 .fieldWithErrors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+  /*padding: 2px;
+    background-color: red;
+    display: table;*/
+  display: inline;
+}
+
+.fieldWithErrors input {
+  border: 1px solid red;
 }
 
 #errorExplanation {
-  width: 400px;
+  /*width: 400px;
   border: 2px solid red;
   padding: 7px;
   padding-bottom: 12px;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+  */
+  color: red;
 }
 
 #errorExplanation h2 {
