--- a/app/views/shared/_forgot_password_dialog.html.erb
+++ b/app/views/shared/_forgot_password_dialog.html.erb
@@ -1,16 +1,16 @@
 <div id='forgot_password_dialog' style='display:none' title='<%= t('shared.forgot_password_dialog.title') %>'>
-  <%= form_for(resource_name, resource, :url => password_path(resource_name)) do |f| %>
+  <%= form_for(:user, :url => password_path(:user)) do |f| %>
     <div class="field">
       <%= f.label :email %>
-      <% unless resource.errors[:email].blank? %>
-        <span id='errorExplanation'>- <%= resource.errors[:email].first %></span>
+      <% unless !@user || @user.errors[:email].blank? %>
+        <span id='errorExplanation'>- <%= @user.errors[:email].first %></span>
       <% end %>
       <br/>
       <%= f.text_field :email %>
     </div>
   <% end %>
 
-  <%= render :partial => "shared/registration_links" %>
+  <%= render :partial => "shared/registration_links", :locals => {:action => :forgot_password} %>
 </div>
 
 <%= javascript_tag do %>
