--- a/app/views/shared/_sign_up_dialog.html.erb
+++ b/app/views/shared/_sign_up_dialog.html.erb
@@ -1,5 +1,5 @@
 <div id='sign_up_dialog' style='display:none' title='<%= t('shared.sign_up_dialog.title') %>'>
-  <%= form_for(resource_name, resource, :url => registration_path(resource_name)) do |f| %>
+  <%= form_for(:user, :url => registration_path(:user)) do |f| %>
     <div class='field'>
       <%= f.label :email %><br/>
       <%= f.text_field :email %>
@@ -13,7 +13,7 @@
       <%= f.password_field :password_confirmation %>
     </div>
   <% end %>
-  <%= render :partial => "shared/registration_links" %>
+  <%= render :partial => "shared/registration_links", :locals => {:action => :sign_up} %>
 </div>
 
 <%= javascript_tag do %>
